<resources>
    <string name="app_name">Pacman</string>
    <string name="points">Points:</string>
    <string name="gameTime">Time remaining:</string>
    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>
    <string name="move_up">Move Up</string>
    <string name="move_down">Move Down</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="pause">Pause</string>
    <string name="resume">Continue</string>
</resources>
