<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.example.canvasdemo.MainActivity" >

    <item
        android:id="@+id/action_newGame"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/newgame"
        android:enabled="true" />

    <item
        android:id="@+id/action_pause"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/pause"
        android:enabled="true" />

    <item
        android:id="@+id/action_continue"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/resume"
        android:enabled="false" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
